Require bootstrap and colorbox from all.css

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <meta property="og:image" content="http://www.mathildeporee.fr/images/vulpes-vulpes-facebook.jpg">
     <meta property="og:site_name" content="Mathilde Por&#xe9;e">
     <title><%= current_page.data.title || "Mathilde Porée" %></title>
-    <%= stylesheet_link_tag "bootstrap", "colorbox", "all" %>
+    <%= stylesheet_link_tag "all" %>
     <%= javascript_include_tag "all" %>
   </head>
   <body>
