--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Mathilde Porée - En ce moment
+title: Mathilde Porée &mdash; En ce moment
 ---
 <div id="evenements">
   <div class="row">
