--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -11,9 +11,12 @@ body {
 }
 
 .thumbnail { border: 0; }
+.center { margin: auto; }
 a:focus, :focus { outline: none; }
 
-.item.w2 { width: 15%; }
+.item.w15 { width: 15%; }
+.item.p2 { padding: 2px 0; }
+.item.p5 { padding: 5px 0; }
 
 header {
   margin: 25px 0;
@@ -79,21 +82,5 @@ footer {
 
   img {
     width: 263px;
-  }
-}
-
-#dessin {
-  margin: 0 auto;
-
-  .item {
-    padding: 5px 0;
-  }
-}
-
-#photographie {
-  margin: 0 auto;
-
-  .item {
-    padding: 2px 0;
   }
 }
