--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,5 +2,5 @@
 title: Mathilde Porée
 ---
 <div id="index" class="center">
-  <%= image_tag "index.jpg", title: "Volatile II, 2014, encre de chine, 42x59cm" %>
+  <%= image_tag "index.jpg", title: "Volatile II, 2014, encre de chine, 42x59cm", alt: "Volatile II, 2014" %>
 </div>
