--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -9,23 +9,23 @@ title: Mathilde Porée &mdash; En ce moment
         BLANC<br>
         COSMIQUE<br>
         Work in progress.<br>
-        (réflexions , libertés<br>
+        (réflexions, libertés<br>
         &amp; productions autour de l’absurde)<br>
         Nathalie Boulet – Elise de Castelbajac –<br>
         Lea Hodencq – Julia Lachaise –<br>
-        Mathilde Porée – Constance Thieux.<br>
+        Mathilde Porée – Constance Thieux.<br>
         Ouvert au public du 3 au 9 mars 2014 –<br>
-        de 14h30 à 18h30 -<br>
-        Finissage le 7 mars à 19h00 -<br>
-        Performance (Arts Numériques)<br>
-        de Steven Bachimont à 20h30 -<br>
+        de 14h30 à 18h30 -<br>
+        Finissage le 7 mars à 19h00 -<br>
+        Performance (Arts Numériques)<br>
+        de Steven Bachimont à 20h30 -<br>
         Atelier le45TER – le45ter.tumblr.com<br>
-        45 Ter, rue de la Révolution 93100 Montreuil.<br>
-        Metro L. 9, Arrêt Robespierre.<br>
+        45 Ter, rue de la Révolution 93100 Montreuil.<br>
+        Metro L. 9, Arrêt Robespierre.<br>
       </p>
     </div>
     <div class="col-md-6">
-      <%= image_tag "evenements/flyer-bleu-blanc-cosmique.jpg" %>
+      <%= image_tag "evenements/flyer-bleu-blanc-cosmique.jpg", alt: "flyer-bleu-blanc-cosmique" %>
     </div>
   </div>
   <div class="row">
@@ -36,7 +36,7 @@ title: Mathilde Porée &mdash; En ce moment
       </p>
     </div>
     <div class="col-md-6">
-      <%= image_tag "evenements/flyer-mauvaises-graines.jpg" %>
+      <%= image_tag "evenements/flyer-mauvaises-graines.jpg", alt: "flyer-mauvaises-graines" %>
     </div>
   </div>
   <div class="row">
@@ -50,7 +50,7 @@ title: Mathilde Porée &mdash; En ce moment
       </p>
     </div>
     <div class="col-md-6">
-      <%= image_tag "evenements/flyer-anonymous-drawings-2013-eindhoven.jpg" %>
+      <%= image_tag "evenements/flyer-anonymous-drawings-2013-eindhoven.jpg", alt: "flyer-anonymous-drawings-2013-eindhoven" %>
     </div>
   </div>
   <div class="row">
@@ -64,7 +64,7 @@ title: Mathilde Porée &mdash; En ce moment
       </p>
     </div>
     <div class="col-md-6">
-      <%= image_tag "evenements/flyer-cutlog-nyc-2013.jpg" %>
+      <%= image_tag "evenements/flyer-cutlog-nyc-2013.jpg", alt: "flyer-cutlog-nyc-2013" %>
     </div>
   </div>
   <div class="row">
@@ -76,7 +76,7 @@ title: Mathilde Porée &mdash; En ce moment
       </p>
     </div>
     <div class="col-md-6">
-      <%= image_tag "evenements/flyer-anonymous-drawings-2013.jpg" %>
+      <%= image_tag "evenements/flyer-anonymous-drawings-2013.jpg", alt: "flyer-anonymous-drawings-2013" %>
     </div>
   </div>
   <div class="row">
@@ -88,7 +88,7 @@ title: Mathilde Porée &mdash; En ce moment
       </p>
     </div>
     <div class="col-md-6">
-      <%= image_tag "evenements/flyer-post-mod-2013.jpg" %>
+      <%= image_tag "evenements/flyer-post-mod-2013.jpg", alt: "flyer-post-mod-2013" %>
     </div>
   </div>
 </div>
