--- a/source/dessin.html.erb
+++ b/source/dessin.html.erb
@@ -22,14 +22,14 @@ title: Mathilde Porée &mdash; Dessin
   </div>
   <% end %>
   <div class="item p5 serie">
-    <% link_to "/dessin/mythes", title: "Série Mythes, 2009-2010, stylo, 14x14cm", alt: "mythes" do %>
-      <%= image_tag "dessin/mythes_thumb.jpg" %>
+    <% link_to "/dessin/mythes", title: "Série Mythes, 2009-2010, stylo, 14x14cm" do %>
+      <%= image_tag "dessin/mythes_thumb.jpg", alt: "mythes" %>
       <div class="overlay"><p>Voir la série</p></div>
     <% end %>
   </div>
   <div class="item p5 serie">
-    <% link_to "/dessin/herbier", title: "Série Herbier, 2012, aquarelle, 14x14cm", alt: "herbier" do %>
-      <%= image_tag "dessin/herbier_thumb.jpg" %>
+    <% link_to "/dessin/herbier", title: "Série Herbier, 2012, aquarelle, 14x14cm" do %>
+      <%= image_tag "dessin/herbier_thumb.jpg", alt: "herbier" %>
       <div class="overlay"><p>Voir la série</p></div>
     <% end %>
   </div>
