--- a/source/cv.html.erb
+++ b/source/cv.html.erb
@@ -28,7 +28,7 @@ title: Mathilde Porée &mdash; CV
       <dt>2009</dt>
         <dd class="last">« Oups ! I did it again… »<br>La Galerie, Ecole Supérieure des Beaux-Arts de Cornouaille, Quimper</dd>
     </dl>
-    <h4>Expositions Individuelles</h4>
+    <h4>Expositions Personnelles</h4>
     <dl>
       <dt>2012</dt>
         <dd class="last">« Nature morte »<br>CAC, Eglise Notre-Dame, Port-Bail</dd>
