--- a/source/dessin/herbier.html.erb
+++ b/source/dessin/herbier.html.erb
@@ -5,7 +5,7 @@ title: Mathilde Porée &mdash; Herbier
   herbier = (1..29).map{ |i| { name: "herbier#{sprintf("%02d", i)}", title: "Herbier, 2012, aquarelle, 14x14cm" } }
 %>
 
-<div id="herbier" class="center">
+<div id="herbier" class="center-block none">
   <% herbier.each do |image| %>
   <div class="item p5">
     <%= gallery image, "herbier" %>
@@ -13,20 +13,13 @@ title: Mathilde Porée &mdash; Herbier
   <% end %>
 </div>
 
-<script>
-  var container = document.querySelector('#herbier');
-  var msnry;
-  imagesLoaded( container, function() {
-    msnry = new Masonry( container, { itemSelector: '.item', gutter: 10, isFitWidth: true } );
-  });
+<div id="spinner">
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
+</div>
 
-  $('.gallery').colorbox({
-    rel:'gallery',
-    transition:"none",
-    height:"75%",
-    closeButton: false,
-    previous: "",
-    next: "",
-    current: ""
-  });
+<script>
+  gallery(document.querySelector('#herbier'), { itemSelector: '.item', gutter: 10, isFitWidth: true });
+  $('.gallery').colorbox(colorbox_options);
 </script>
