--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Mathilde Porée
 ---
-<div id="index" class="center">
+<div id="index" class="center-block">
   <%= image_tag "index.jpg", title: "Volatile II, 2014, encre de chine, 42x59cm", alt: "Volatile II, 2014" %>
 </div>
