--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -38,7 +38,7 @@
       </nav>
       <h1><% link_to "/" do %>Mathilde Porée<% end %></h1>
     </header>
-    <div class="container">
+    <div class="container min360">
       <%= yield %>
     </div>
     <div id="fb-root"></div>
