--- a/source/photographie.html.erb
+++ b/source/photographie.html.erb
@@ -6,7 +6,7 @@ title: Mathilde Porée &mdash; Photographie
   fossiles = (1..20).map{ |i| { name: "fossiles#{sprintf("%02d", i)}", title: "Fossiles, 2009, photographies argentiques, 22x22cm" } }
 %>
 
-<div id="photographie" class="center">
+<div id="photographie" class="center-block none">
   <% poussiere.each do |image| %>
   <div class="item p2">
     <%= gallery image, "photographie/poussiere" %>
@@ -19,20 +19,13 @@ title: Mathilde Porée &mdash; Photographie
   <% end %>
 </div>
 
-<script>
-  var container = document.querySelector('#photographie');
-  var msnry;
-  imagesLoaded( container, function() {
-    msnry = new Masonry( container, { itemSelector: '.item', gutter: 3, isFitWidth: true } );
-  });
+<div id="spinner">
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
+</div>
 
-  $('.gallery').colorbox({
-    rel:'gallery',
-    transition:"none",
-    height:"75%",
-    closeButton: false,
-    previous: "",
-    next: "",
-    current: ""
-  });
+<script>
+  gallery(document.querySelector('#photographie'), { itemSelector: '.item', gutter: 3, isFitWidth: true });
+  $('.gallery').colorbox(colorbox_options);
 </script>
