--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -5,21 +5,28 @@
 
 @import url('/fonts/KozGoPr6N-Light.otf');
 
+$color: #4d4d4d;
+$color-light: #6d6d6d;
+$color-lighter: #9d9d9d;
+
 body {
   background: #fff;
   font-family: 'KozGoPr6N-Light';
-  color: #4d4d4d;
+  color: $color;
 }
 
-.thumbnail { border: 0; }
-.center { margin: auto; }
-a { color: #9d9d9d; }
-a:hover { color: #4d4d4d; text-decoration: none; }
+a { color: $color-lighter; }
+a:hover { color: $color; text-decoration: none; }
 a:focus, :focus { outline: none; }
 
+.none { display: none; }
+
 .item.w15 { width: 15%; }
+
 .item.p2 { padding: 2px 0; }
 .item.p5 { padding: 5px 0; }
+
+.min360 { min-height: 360px; }
 
 /* Header */
 
@@ -28,11 +35,11 @@ header {
   text-align: center;
 
   a {
-    color: #9d9d9d;
+    color: $color-lighter;
     padding: 20px;
 
     &:hover {
-      color: #4d4d4d;
+      color: $color;
       text-decoration: none;
     }
   }
@@ -41,7 +48,7 @@ header {
     font-size: 2.3em;
     letter-spacing: 3px;
     margin: 50px 0 75px 0;
-    color: #6d6d6d;
+    color: $color-light;
   }
 
   nav {
@@ -58,7 +65,7 @@ header {
     }
 
     li a {
-      color: #9d9d9d;
+      color: $color-lighter;
       padding: 10px;
     }
   }
@@ -95,10 +102,6 @@ footer {
   }
 }
 
-#installation {
-  min-height: 360px;
-}
-
 #cv {
   h2 {
     margin: 0;
@@ -113,7 +116,7 @@ footer {
   }
 
   dd {
-    color: #6d6d6d;
+    color: $color-light;
     margin-left: 45px;
     padding-bottom: 5px;
   }
@@ -124,8 +127,6 @@ footer {
 }
 
 #liens {
-  min-height: 360px;
-
   ul {
     list-style-type: none;
   }
@@ -154,4 +155,51 @@ footer {
 .serie:hover .overlay {
   display: block;
   opacity: 1;
+}
+
+/* Spinner */
+
+#spinner {
+  margin: 50px auto 0;
+  width: 70px;
+  text-align: center;
+}
+
+#spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: $color-light;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+  animation: bouncedelay 1.4s infinite ease-in-out;
+  /* Prevent first frame from flickering when animation starts */
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+#spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+#spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0.0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bouncedelay {
+  0%, 80%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 40% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
