--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -6,7 +6,7 @@ title: Mathilde Porée &mdash; En ce moment
     <div class="col-md-3 col-md-offset-3">
       <p>
         The Curator presents<br>
-        OBSESSION: Love, Ritual, Collection<br>
+        <a href="https://www.facebook.com/events/1429731567275512/">OBSESSION: Love, Ritual, Collection</a><br>
         EMBASSY TEA GALLERY<br>
         195 - 205 Union Street London SE1 0LN<br>
         Exhibition open by appointment only 24th June - 27th June<br>
