Update fossiles thumbs and gallery

--- a/source/photographie.html.erb
+++ b/source/photographie.html.erb
@@ -13,7 +13,7 @@ title: Mathilde Porée &mdash; Photographie
   </div>
   <% end %>
   <% fossiles.each do |image| %>
-  <div class="item p2 w15">
+  <div class="item p2">
     <%= gallery image, "photographie/fossiles" %>
   </div>
   <% end %>
