--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,7 +30,7 @@
           <li><a href="/photographie">Photographie</a></li>
           <li><a href="/dessin">Dessin</a></li>
           <li><a href="/installation">Installation</a></li>
-          <li><a href="#">Vidéo</a></li>
+          <li><a href="/video">Vidéo</a></li>
           <li><a href="/cv">CV</a></li>
           <li><a href="mailto:contact@mathildeporee.fr">Contact</a></li>
           <li><a href="/liens">Liens</a></li>
