--- a/source/video.html.erb
+++ b/source/video.html.erb
@@ -2,5 +2,7 @@
 title: Mathilde Porée &mdash; Vidéo
 ---
 <div id="video">
-  <iframe src="//player.vimeo.com/video/93082666" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/93082666">Rituel</a> from <a href="http://vimeo.com/user26904699">Mathilde Por&eacute;e</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+  <!-- <iframe src="//player.vimeo.com/video/93082666?color=ffffff" width="768" height="576" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/93082666">Rituel</a> from <a href="http://vimeo.com/user26904699">Mathilde Por&eacute;e</a> on <a href="https://vimeo.com">Vimeo</a>.</p> -->
+  <object width="768" height="576"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=93082666&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=1&amp;color=ffffff&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=93082666&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=1&amp;color=ffffff&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="500" height="375"></embed></object>
+  <p><a href="http://vimeo.com/93082666">Rituel</a> from <a href="http://vimeo.com/user26904699">Mathilde Por&eacute;e</a></p>
 </div>
