--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -53,10 +53,17 @@ header {
   }
 
   h1 {
-    font-size: 2.3em;
+    font-size: 2em;
     letter-spacing: 3px;
     margin: 50px 0 75px 0;
-    color: $color-light;
+
+    a {
+      color: $color;
+
+      &:hover {
+        color: $color-lighter;
+      }
+    }
   }
 
   nav {
