--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -4,15 +4,17 @@
 @charset "utf-8";
 
 @font-face {
-  font-family: 'KozGoPr6N-Light';
-  src: url('/fonts/KozGoPr6N-Light.otf') format('opentype');
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(http://themes.googleusercontent.com/static/fonts/roboto/v11/Hgo13k-tfSpn0qi1SFdUfbO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
 }
 
 @font-face {
-  font-family: 'Overlock';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Overlock'), local('Overlock-Regular'), url(http://themes.googleusercontent.com/static/fonts/overlock/v3/Pr-80_x4SIOocpxz2VxC5XYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 300;
+  src: local('Roboto Light Italic'), local('Roboto-LightItalic'), url(http://themes.googleusercontent.com/static/fonts/roboto/v11/7m8l7TlFO-S3VkhHuR0at7rIa-7acMAeDBVuclsi6Gc.woff) format('woff');
 }
 
 $color: #4d4d4d;
@@ -21,7 +23,9 @@ $color-lighter: #9d9d9d;
 
 body {
   background: #fff;
-  font-family: 'KozGoPr6N-Light', 'Overlock', 'sans-serif';
+  font-family: 'Roboto', 'sans-serif';
+  font-style: normal;
+  font-weight: 300;
   color: $color;
 }
 
