--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,6 +4,18 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <% link_to "../images/evenements/flyer-tribune-2.jpg", class: "flyer" do %>
+        <%= image_tag "evenements/flyer-tribune-2.jpg", alt: "flyer-tribune" %>
+      <% end %>
+    </div>
+    <div class="col-md-6">
+      <% link_to "../images/evenements/flyer-tribune-1.jpg", class: "flyer" do %>
+        <%= image_tag "evenements/flyer-tribune-1.jpg", alt: "flyer-tribune" %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
       <p>
         The Curator presents<br>
         <a href="https://www.facebook.com/events/1429731567275512/">OBSESSION: Love, Ritual, Collection</a><br>
