--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,18 +4,8 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
-      <% link_to "../images/evenements/flyer-tribune-2.jpg", class: "flyer" do %>
-        <%= image_tag "evenements/flyer-tribune-2.jpg", alt: "flyer-tribune" %>
-      <% end %>
-    </div>
-    <div class="col-md-6">
-      <% link_to "../images/evenements/flyer-tribune-1.jpg", class: "flyer" do %>
-        <%= image_tag "evenements/flyer-tribune-1.jpg", alt: "flyer-tribune" %>
-      <% end %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3 col-md-offset-3">
+      <h4>OBSESSION: Love, Ritual, Collection</h4>
+      <p><small>24 &ndash; 27 juin 2014</small></p>
       <p>
         The Curator presents<br>
         <a href="https://www.facebook.com/events/1429731567275512/">OBSESSION: Love, Ritual, Collection</a><br>
@@ -35,6 +25,43 @@ title: Mathilde Porée &mdash; En ce moment
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>TRIBU[NE]</h4>
+      <p><small>4 &ndash; 14 juin 2014</small></p>
+      <p>
+        Le collectif Körper présente TRIBU[NE] en partenariat avec l'Atelier d'Estienne<br>
+        Exposition collective au Manoir de Saint-Urchaut à Pont-Scorff.<br>
+        Vernissage le samedi 7 Juin 2014 à 17h00<br>
+        Le Collectif Körper :<br>
+        Klervi Bourseul, Julie Laignel, Cédric Le Corf, Maël Nohazic, Arnaud Rochard<br>
+        invite les dîplomés des quatre écoles européennes supérieures d'art de Bretagne :<br>
+        Ouvert tout les jours de 10h à 12h et de 14h à 18h, fermé le lundi.<br>
+        Au programme :<br>
+        Présentation des éditions de La Maison&amp; et du catalogue de l'exposition.<br>
+        à partir de 17h :<br>
+        - Début de la performance "La jarretière" de Mélanie Peduzzi et Manon Peresse qui se déroulera tout au long du vernissage<br>
+        - Poursuite du dessin performatif de Marion Plumet et Marion Viot qui se prolongera tout au long de l'exposition<br>
+        18h45 : Performance de Sophie Brisard "Le bouffon"<br>
+        19h30 : Performance de Yohan Rochereau "Parade"<br>
+        20h30 : Show Burlesque par le "Cabernet Bullesque"<br>
+      </p>
+    </div>
+    <div class="col-md-6">
+      <div>
+        <% link_to "../images/evenements/flyer-tribune-1.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-tribune-1.jpg", alt: "flyer-tribune" %>
+        <% end %>
+      </div>
+      <div>
+        <% link_to "../images/evenements/flyer-tribune-2.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-tribune-2.jpg", alt: "flyer-tribune" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
+      <h4>BLEU BLANC COSMIQUE</h4>
+      <p><small>3 &ndash; 9 mars 2014</small></p>
       <p>
         BLEU<br>
         BLANC<br>
@@ -63,10 +90,9 @@ title: Mathilde Porée &mdash; En ce moment
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
-      <p>
-        Mauvaises Graines<br>
-        Inauguration de l’atelier le45ter / Exposition collective
-      </p>
+      <h4>Mauvaises Graines</h4>
+      <p><small>22 &ndash; 24 novembre 2013</small></p>
+      <p>Inauguration de l’atelier le45ter / Exposition collective</p>
     </div>
     <div class="col-md-6">
       <% link_to "../images/evenements/flyer-mauvaises-graines.jpg", class: "flyer" do %>
@@ -76,11 +102,11 @@ title: Mathilde Porée &mdash; En ce moment
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Anonymous Drawings 2013</h4>
+      <p><small>24 mai &ndash; 9 juin 2013</small></p>
       <p>
-        Anonymous Drawings 2013<br>
-        at TAC Eindhoven<br>
+        At TAC Eindhoven<br>
         Curated by Anke Becker<br>
-        Exhibition: May 24 – June 9, 2013<br>
         Opening reception: Friday, May 24 / 5 pm<br>
       </p>
     </div>
@@ -92,8 +118,9 @@ title: Mathilde Porée &mdash; En ce moment
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Cutlog, New-York Art Fair 2013</h4>
+      <p><small>8 &ndash; 13 mai 2013</small></p>
       <p>
-        Cutlog, New-York Art Fair 2013<br>
         FREE PARKING<br>
         CUTLOG’S OUTDOOR PROJECTED IMAGE SERIES<br>
         8PM – MIDNIGHT IN THE PARKING LOT<br>
@@ -108,9 +135,9 @@ title: Mathilde Porée &mdash; En ce moment
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Anonymous Drawings</h4>
+      <p><small>24 mars &ndash; 20 avril 2013</small></p>
       <p>
-        Exposition “Anonymous Drawings”<br>
-        24 mars – 20 avril 2013<br>
         Galerie Nord / Kunstverein Tiergarten, Berlin<br>
       </p>
     </div>
@@ -122,8 +149,9 @@ title: Mathilde Porée &mdash; En ce moment
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Post-Modernités Photographiques</h4>
+      <p><small>5 &ndash; 16 mars 2013</small></p>
       <p>
-        Exposition “Post-Modernités Photographiques”<br>
         Vernissage mardi 5 mars 2013 à partir de 18h30<br>
         Galerie Artligre, Paris 12e<br>
       </p>
