--- a/source/cv.html.erb
+++ b/source/cv.html.erb
@@ -7,35 +7,34 @@ title: Mathilde Porée &mdash; CV
     <h4>Expositions Collectives / Festivals</h4>
     <dl>
       <dt>2014</dt>
-        <dd>« OBSESSION: Love, Ritual, Collection »<br>Curated by Charlotte Meddings, Embassy Tea Gallery, Londres</dd>
-        <dd class="last">« Bleu Blanc Cosmique »<br>Atelier Le45TER, Montreuil</dd>
+        <dd>&laquo; TRIBU[NE] &raquo;<br>Exposition du collectif Körper en partenariat avec l'Atelier d'Estienne, Manoir de Saint-Urchaut, Pont-Scorff</dd>
+        <dd>&laquo; OBSESSION: Love, Ritual, Collection &raquo;<br>Curated by Charlotte Meddings, Embassy Tea Gallery, Londres</dd>
+        <dd class="last">&laquo; Bleu Blanc Cosmique &raquo;<br>Atelier Le45TER, Montreuil</dd>
       <dt>2013</dt>
-        <dd>« Mauvaises Graines »<br>Le45TER, Montreuil</dd>
-        <dd>« Anonymous drawings »<br>Centre d&#8217;Art Temporaire, Eindhoven</dd>
-        <dd>« Cutlog, New York »<br>New York, USA</dd>
-        <dd>« Anonymous drawings »<br>Galerie Nord / Kunstverein Tiergarten, Berlin</dd>
-        <dd>« Post-modernités photographiques »<br>Galerie Artligre, Paris</dd>
-        <dd class="last">« Vanités »<br>Galerie Pôle Art 13, Paris</dd>
+        <dd>&laquo; Mauvaises Graines &raquo;<br>Le45TER, Montreuil</dd>
+        <dd>&laquo; Anonymous drawings &raquo;<br>Centre d&#8217;Art Temporaire, Eindhoven</dd>
+        <dd>&laquo; Cutlog, New York &raquo;<br>New York, USA</dd>
+        <dd>&laquo; Anonymous drawings &raquo;<br>Galerie Nord / Kunstverein Tiergarten, Berlin</dd>
+        <dd>&laquo; Post-modernités photographiques &raquo;<br>Galerie Artligre, Paris</dd>
+        <dd class="last">&laquo; Vanités &raquo;<br>Galerie Pôle Art 13, Paris</dd>
       <dt>2012</dt>
-        <dd>« Le mois de la photo – l’After, 50 Photographes »<br>Galerie Artligre, Paris</dd>
+        <dd>&laquo; Le mois de la photo – l’After, 50 Photographes &raquo;<br>Galerie Artligre, Paris</dd>
         <dd class="last">Festival Loopingstar<br>Sarrebrück</dd>
-      <dt>2011</dt>
-        <dd class="last">« Total Animal »<br>Le numéro 23, Poitiers</dd>
       <dt>2010</dt>
-        <dd class="last">« Je travaillerai demain »<br>Collectif Moustache-Fontaine, Paris</dd>
+        <dd class="last">&laquo; Je travaillerai demain &raquo;<br>Collectif Moustache-Fontaine, Paris</dd>
       <dt></dt>
-        <dd class="last">« Travaillez plus ! » <br>Collectif Moustache-Fontaine, Paris</dd>
+        <dd class="last">&laquo; Travaillez plus ! &raquo;<br>Collectif Moustache-Fontaine, Paris</dd>
       <dt>2009</dt>
-        <dd class="last">« Oups ! I did it again… »<br>La Galerie, Ecole Supérieure des Beaux-Arts de Cornouaille, Quimper</dd>
+        <dd class="last">&laquo; Oups ! I did it again… &raquo;<br>La Galerie, Ecole Supérieure des Beaux-Arts de Cornouaille, Quimper</dd>
     </dl>
     <h4>Expositions Personnelles</h4>
     <dl>
       <dt>2012</dt>
-        <dd class="last">« Nature morte »<br>CAC, Eglise Notre-Dame, Port-Bail</dd>
+        <dd class="last">&laquo; Nature morte &raquo;<br>CAC, Eglise Notre-Dame, Port-Bail</dd>
       <dt>2010</dt>
-        <dd class="last">« Mes immortels »<br>Comité d’Action Culturelle, Port-Bail</dd>
+        <dd class="last">&laquo; Mes immortels &raquo;<br>Comité d’Action Culturelle, Port-Bail</dd>
       <dt>2009</dt>
-        <dd class="last">« Extispicine »<br>Galerie Il était une fois, Pont-Aven</dd>
+        <dd class="last">&laquo; Extispicine &raquo;<br>Galerie Il était une fois, Pont-Aven</dd>
     </dl>
     <h4>Cursus</h4>
     <dl>
