Update dessin, add dessins

--- a/source/dessin.html.erb
+++ b/source/dessin.html.erb
@@ -3,10 +3,13 @@ title: Mathilde Porée &mdash; Dessin
 ---
 <%
   gallery = [
-    { name: "capreolus-capreolus", title: "Capreolus, Capreolus, 2014, encre de chine, 120x150cm" },
-    { name: "volatile-1", title: "Volatile I, 2014, encre de chine, 42x59cm" },
+    { name: "volatile-3", title: "Volatile III, 2014, encre de chine, 42x59cm" },
     { name: "volatile-2", title: "Volatile II, 2014, encre de chine, 42x59cm" },
+    { name: "volatile-1", title: "Volatile I, 2014, encre de chine, 42x59cm" },
+    { name: "cotentin-dream", title: "Cotentin Dream, 2014, stylo et mine de plomb, 100x150cm, réalisé avec Guillaume Querré" },
+    { name: "capreolus-capreolus", title: "Capreolus, Capreolus, 2014, encre de chine, 120x150cm" },
     { name: "vulpes-vulpes", title: "Vulpes, vulpes, 2013, graphite et encre de chine, 100x100cm" },
+    { name: "cotentin-dream-detail", title: "Cotentin Dream, 2014, détail, stylo et mine de plomb, réalisé avec Guillaume Querré" },
     { name: "peau-de-chagrin", title: "Peau de chagrin, Geai, 2012, stylo et feutre" },
     { name: "resurrection-1", title: "Résurrection I, 2012, stylo et encre de chine, 120x150cm, réalisé avec Guillaume Querré" },
     { name: "resurrection-2", title: "Résurrection II, 2013, stylo et aquarelle, 105×157.5cm, réalisé avec Guillaume Querré" },
