--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -7,7 +7,7 @@ title: Mathilde Porée &mdash; En ce moment
       <h4>Prix de dessin de l'Académie des beaux-arts - Pierre David-Weill</h4>
       <p><small>26 juin &ndash; 10 juillet 2014</small></p>
       <p>
-        Exposition collective des artistes sélectionnés à concourrir pour le prix de dessin Pierre David-Weill.<br>
+        Exposition collective des artistes sélectionnés à concourir pour le prix de dessin Pierre David-Weill.<br>
         Institut de France<br>
         Académie des beaux-arts, 23 quai de Conti, 75006, PARIS<br>
         Du mardi au dimanche de 11h à 18h
