--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,6 +4,27 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Parcours d'artistes</h4>
+      <p><small>4 novembre &ndash; 12 décembre 2014</small></p>
+      <p>
+        Exposition collective<br>
+        Les Passerelles<br>
+        17 rue Saint-Clair, Pontault-Combault<br><br>
+        Vernissage vendredi 7 novembre à 19h<br><br>
+        Mardi et jeudi 16h-18h<br>
+        Vendredi 16h-19h<br>
+        Mecredi et samedi 10h-12h30 / 13h30-18h<br><br>
+        Clotûre et remise des prix vendredi 12 décembre à 19h
+      </p>
+    </div>
+    <div class="col-md-6">
+      <% link_to "../images/evenements/flyer-parcours-artistes-2014.jpg", class: "flyer" do %>
+        <%= image_tag "evenements/flyer-parcours-artistes-2014.jpg", alt: "flyer-parcours-artistes-2014" %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
       <h4>Prix de dessin de l'Académie des beaux-arts - Pierre David-Weill</h4>
       <p><small>26 juin &ndash; 10 juillet 2014</small></p>
       <p>
