--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,6 +4,43 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Nêtre</h4>
+      <p><small>9 janvier &ndash; 25 janvier 2015</small></p>
+      <p>
+        Exposition collective<br>
+        Plateforme<br>
+        73 rue des Haies<br>
+        75020, Paris
+      </p>
+      <p>
+        Vernissage le vendredi 9 janvier de 18h à 22h
+      </p>
+      <p>
+        le collectif Körper :<br>
+        Klervi Bourseul, Julie Laignel, Cedric Le Corf, Maël Nozahic, Arnaud Rochard<br>
+        et leurs invités :<br>
+        Romain Bernini, Kosta Kulundzic, Justin Lépany, Bruno Peinado et Mathilde Porée
+      </p>
+      <p>
+        "Nêtre" interroge la notion de naissance à travers le regard de dix artistes qui nous proposent autant de variété plastique que d'interprétation sur le sujet: mythes fondateurs, point de vue théologique et philosophique, explications scientifiques ...
+        Le collectif Körper et ses invités fouillent dans la grande question de l'origine du monde, dissèquent et poétisent le naître et ne pas être en s'attachant à confronter la création à la destruction, la vie à la mort.
+      <p>
+    </div>
+    <div class="col-md-6">
+      <div>
+        <% link_to "../images/evenements/flyer-netre-recto.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-netre-recto.jpg", alt: "flyer-netre-recto" %>
+        <% end %>
+      </div>
+      <div>
+        <% link_to "../images/evenements/flyer-netre-verso.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-netre-verso.jpg", alt: "flyer-netre-verso" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
       <h4>Parcours d'artistes</h4>
       <p><small>4 novembre &ndash; 12 décembre 2014</small></p>
       <p>
