Add event kabinet du dessin

--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,6 +4,27 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Le Kabinet du Dessin</h4>
+      <p><small>14 février &ndash; 7 Mars 2015</small></p>
+      <p>
+        Exposition collective<br>
+        Le Kabinet<br>
+        Avenue de la Reine, 211, 1000 Région de Bruxelles
+      </p>
+      <p>
+        Vernissage le samedi 14 février de 18h à 21h
+      </p>
+    </div>
+    <div class="col-md-6">
+      <div>
+        <% link_to "../images/evenements/flyer-kabinet-du-dessin-2015.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-kabinet-du-dessin-2015.jpg", alt: "flyer-kabinet-du-dessin" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
       <h4>Nêtre</h4>
       <p><small>9 janvier &ndash; 25 janvier 2015</small></p>
       <p>
