--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,6 +4,27 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>Open Studio</h4>
+      <p><small>27 février &ndash; 1 Mars 2015</small></p>
+      <p>
+        Portes ouvertes<br>
+        Atelier Le45TER<br>
+        45Ter rue de la Révolution 93100 Montreuil
+      </p>
+      <p>
+        Ouverture le 27 février à partir de 18h30
+      </p>
+    </div>
+    <div class="col-md-6">
+      <div>
+        <% link_to "../images/evenements/flyer-open-studio-2015.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-open-studio-2015.jpg", alt: "flyer-open-studio" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
       <h4>Le Kabinet du Dessin</h4>
       <p><small>14 février &ndash; 7 Mars 2015</small></p>
       <p>
