--- a/source/cv.html.erb
+++ b/source/cv.html.erb
@@ -6,6 +6,9 @@ title: Mathilde Porée &mdash; CV
     <h2>CV</h2>
     <h4>Expositions Collectives / Festivals</h4>
     <dl>
+      <dt>2015</dt>
+        <dd>&laquo; Le Kabinet du Dessin &raquo;<br>Le Kabinet, Bruxelles</dd>
+        <dd class="last">&laquo; Nêtre &raquo;<br>Galerie Plateforme, Paris</dd>
       <dt>2014</dt>
         <dd>&laquo; Parcours d'artistes &raquo;<br>Les Passerelles, Pontault-Combault</dd>
         <dd>&laquo; Prix de dessin de l'Académie des beaux-arts - Pierre David-Weill &raquo;<br>Exposition collective, Institut de France - Académie des beaux-arts, Paris</dd>
