--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,7 +29,7 @@
           <li><a href="/evenements">En ce moment</a></li>
           <li><a href="/photographie">Photographie</a></li>
           <li><a href="/dessin">Dessin</a></li>
-          <li><a href="/installation">Installation</a></li>
+          <li><a href="/installation">Vues d'exposition</a></li>
           <li><a href="/video">Vidéo</a></li>
           <li><a href="/cv">CV</a></li>
           <li><a href="mailto:contact@mathildeporee.fr">Contact</a></li>
