Add new drawings in section 'dessin'

--- a/source/dessin.html.erb
+++ b/source/dessin.html.erb
@@ -3,9 +3,11 @@ title: Mathilde Porée &mdash; Dessin
 ---
 <%
   gallery = [
-    { name: "volatile-3", title: "Volatile III, 2014, encre de chine, 42x59cm" },
     { name: "volatile-2", title: "Volatile II, 2014, encre de chine, 42x59cm" },
+    { name: "volatile-5", title: "Volatile V, 2014, encre de chine, 20x22cm" },
     { name: "volatile-1", title: "Volatile I, 2014, encre de chine, 42x59cm" },
+    { name: "volatile-4", title: "Volatile IV, 2014, encre de chine, 20x22cm" },
+    { name: "volatile-3", title: "Volatile III, 2014, encre de chine, 42x59cm" },
     { name: "cotentin-dream", title: "Cotentin Dream, 2014, stylo et mine de plomb, 100x150cm, réalisé avec Guillaume Querré" },
     { name: "capreolus-capreolus", title: "Capreolus, Capreolus, 2014, encre de chine, 120x150cm" },
     { name: "vulpes-vulpes", title: "Vulpes, vulpes, 2013, graphite et encre de chine, 100x100cm" },
