Add event PaperWork

--- a/source/evenements.html.erb
+++ b/source/evenements.html.erb
@@ -4,8 +4,34 @@ title: Mathilde Porée &mdash; En ce moment
 <div id="evenements">
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
+      <h4>PaperWork</h4>
+      <p><small>27 mars &ndash; 24 avril 2015</small></p>
+      <p>
+        Exposition collective<br>
+        Galerie Mémoire de l'Avenir<br>
+        45/47 rue Ramponeau, 75020, Paris
+      </p>
+      <p>
+        Vernissage le vendredi 27 mars à partir de 19h
+      </p>
+    </div>
+    <div class="col-md-6">
+      <div>
+        <% link_to "../images/evenements/flyer-paperwork-recto.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-paperwork-recto.jpg", alt: "flyer-paperwork" %>
+        <% end %>
+      </div>
+      <div>
+        <% link_to "../images/evenements/flyer-paperwork-verso.jpg", class: "flyer" do %>
+          <%= image_tag "evenements/flyer-paperwork-verso.jpg", alt: "flyer-paperwork" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-3">
       <h4>Open Studio</h4>
-      <p><small>27 février &ndash; 1 Mars 2015</small></p>
+      <p><small>27 février &ndash; 1 mars 2015</small></p>
       <p>
         Portes ouvertes<br>
         Atelier Le45TER<br>
@@ -26,7 +52,7 @@ title: Mathilde Porée &mdash; En ce moment
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
       <h4>Le Kabinet du Dessin</h4>
-      <p><small>14 février &ndash; 7 Mars 2015</small></p>
+      <p><small>14 février &ndash; 7 mars 2015</small></p>
       <p>
         Exposition collective<br>
         Le Kabinet<br>
